--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "api-docs"]
 	path = api-docs
-	url = ../api-docs.git
+	url = https://github.com/KhronosGroup/OpenVX-api-docs.git
 	branch = master
 [submodule "cts"]
 	path = cts
-	url = ../cts.git
+	url = https://github.com/KhronosGroup/OpenVX-cts.git
 	branch = master
