Set NEON compiler switch.

--- a/kernels/CMakeLists.txt
+++ b/kernels/CMakeLists.txt
@@ -19,5 +19,6 @@
 add_subdirectory( c_model )
 add_subdirectory( debug )
 add_subdirectory( extras )
-add_subdirectory( venum )
-
+if (EXPERIMENTAL_USE_VENUM)
+    add_subdirectory( venum )
+endif (EXPERIMENTAL_USE_VENUM)
