Add a Box3x3 tiling kernel and tiling library

--- a/kernels/CMakeLists.txt
+++ b/kernels/CMakeLists.txt
@@ -19,4 +19,7 @@
 add_subdirectory( c_model )
 add_subdirectory( debug )
 add_subdirectory( extras )
+if (OPENVX_USE_TILING)
+    add_subdirectory( tiling )
+endif (OPENVX_USE_TILING)
 
