fixed the build for opencl interop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ set(CMAKE_CONFIGURATION_TYPES ${CMAKE_CONFIGURATION_TYPES} CACHE STRING "Availab
 # Default options for the CMake GUI
 option( OPENVX_USE_IX ON )
 option( OPENVX_USE_NN ON )
+option( OPENVX_USE_OPENCL_INTEROP OFF )
 option( OPENVX_USE_S16 OFF )
 option( OPENVX_USE_TILING OFF )
 option( OPENVX_USE_XML OFF )
@@ -78,6 +79,11 @@ if (OPENVX_USE_NN)
     add_definitions( -DOPENVX_USE_NN )
     message( "-- Offical NeuralNet extension")
 endif (OPENVX_USE_NN)
+if (OPENVX_USE_OPENCL_INTEROP)
+    add_definitions( -DOPENVX_USE_OPENCL_INTEROP )
+    message( "-- Official OpenVX OpenCL Interop")
+    find_package(OpenCL REQUIRED)
+endif (OPENVX_USE_OPENCL_INTEROP)
 # Provisional extensions
 if (OPENVX_USE_TILING)
     add_definitions( -DOPENVX_USE_TILING )
