--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,10 @@ script:
   - cd ../
   # Mode:1 -- OpenVX Conformance for Vision
   - mkdir build-cts-mode-1
-  - rm -rf install/Linux/x64/Debug
-  - python Build.py --os=Linux --arch=64 --conf=Debug --conf_vision
+  - export OPENVX_DIR=$(pwd)/install/Linux/x64/Release
+  - mkdir build-cts-mode-1
+  - rm -rf install/Linux/x64/Release
+  - python Build.py --os=Linux --arch=64 --conf=Release --conf_vision
   - cd build-cts-mode-1
   - cmake -DOPENVX_INCLUDES=$OPENVX_DIR/include -DOPENVX_LIBRARIES=$OPENVX_DIR/bin/libopenvx.so\;$OPENVX_DIR/bin/libvxu.so\;pthread\;dl\;m\;rt -DOPENVX_CONFORMANCE_VISION=ON ../cts/
   - cmake --build .
@@ -47,8 +49,8 @@ script:
   - cd ../
   # Mode:2 -- OpenVX Conformance for Vision & Enhanced Vision
   - mkdir build-cts-mode-2
-  - rm -rf install/Linux/x64/Debug
-  - python Build.py --os=Linux --arch=64 --conf=Debug --conf_vision --enh_vision
+  - rm -rf install/Linux/x64/Release
+  - python Build.py --os=Linux --arch=64 --conf=Release --conf_vision --enh_vision
   - cd build-cts-mode-2
   - cmake -DOPENVX_INCLUDES=$OPENVX_DIR/include -DOPENVX_LIBRARIES=$OPENVX_DIR/bin/libopenvx.so\;$OPENVX_DIR/bin/libvxu.so\;pthread\;dl\;m\;rt -DOPENVX_CONFORMANCE_VISION=ON -DOPENVX_USE_ENHANCED_VISION=ON ../cts/
   - cmake --build .
@@ -56,8 +58,8 @@ script:
   - cd ../
   # Mode:3 -- OpenVX Conformance for Neural Net
   - mkdir build-cts-mode-3
-  - rm -rf install/Linux/x64/Debug
-  - python Build.py --os=Linux --arch=64 --conf=Debug --conf_nn
+  - rm -rf install/Linux/x64/Release
+  - python Build.py --os=Linux --arch=64 --conf=Release --conf_nn
   - cd build-cts-mode-3
   - cmake -DOPENVX_INCLUDES=$OPENVX_DIR/include -DOPENVX_LIBRARIES=$OPENVX_DIR/bin/libopenvx.so\;$OPENVX_DIR/bin/libvxu.so\;pthread\;dl\;m\;rt -DOPENVX_CONFORMANCE_NEURAL_NETWORKS=ON ../cts/
   - cmake --build .
@@ -67,16 +69,16 @@ script:
   # -- TBD --
   # Mode:5 -- OpenVX Conformance for Vision, Enhanced Vision, Neural Net, TBD:(NNEF Import), Import/Export, TBD:(NN_16, & Binary)
   - mkdir build-cts-mode-5
-  - rm -rf install/Linux/x64/Debug
-  - python Build.py --os=Linux --arch=64 --conf=Debug --conf_vision --enh_vision --conf_nn --nn --ix
+  - rm -rf install/Linux/x64/Release
+  - python Build.py --os=Linux --arch=64 --conf=Release --conf_vision --enh_vision --conf_nn --nn --ix
   - cd build-cts-mode-5
   - cmake -DOPENVX_INCLUDES=$OPENVX_DIR/include -DOPENVX_LIBRARIES=$OPENVX_DIR/bin/libopenvx.so\;$OPENVX_DIR/bin/libvxu.so\;pthread\;dl\;m\;rt -DOPENVX_CONFORMANCE_VISION=ON -DOPENVX_USE_ENHANCED_VISION=ON -DOPENVX_CONFORMANCE_NEURAL_NETWORKS=ON -DOPENVX_USE_NN=ON -DOPENVX_USE_IX=ON ../cts/
   - cmake --build .
   #- LD_LIBRARY_PATH=./lib ./bin/vx_test_conformance [RUN Disabled]
   - cd ../
   # Mode:6 -- OpenVX Conformance for Vision, Enhanced Vision, Pipelining, & Streaming
-  - rm -rf install/Linux/x64/Debug
-  - python Build.py --os=Linux --arch=64 --conf=Debug --conf_vision --enh_vision --pipelining --streaming
+  - rm -rf install/Linux/x64/Release
+  - python Build.py --os=Linux --arch=64 --conf=Release --conf_vision --enh_vision --pipelining --streaming
 
 after_success:
   - lcov --directory . --capture --output-file coverage.info
