Sync internal bug fixes and NNEF support to github:
- Zero area rectangles should result in invalid parameters error
- fix BilateralFilter bugs
- Import NNEF kernel from URL functions

--- a/kernels/CMakeLists.txt
+++ b/kernels/CMakeLists.txt
@@ -25,3 +25,6 @@ endif (EXPERIMENTAL_USE_VENUM)
 if (OPENVX_USE_TILING)
     add_subdirectory( tiling )
 endif (OPENVX_USE_TILING)
+if (OPENVX_CONFORMANCE_NNEF_IMPORT)
+add_subdirectory( nnef_parser )
+endif (OPENVX_CONFORMANCE_NNEF_IMPORT)
