--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = cts
 	url = https://github.com/KhronosGroup/OpenVX-cts.git
 	branch = openvx_1.3
+[submodule "kernels/NNEF-Tools"]
+	path = kernels/NNEF-Tools
+	url = https://github.com/KhronosGroup/NNEF-Tools/
