Add support for user data object extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ set(CMAKE_CONFIGURATION_TYPES ${CMAKE_CONFIGURATION_TYPES} CACHE STRING "Availab
 # Default options for the CMake GUI
 option( OPENVX_USE_IX ON )
 option( OPENVX_USE_NN ON )
+option( OPENVX_USE_USER_DATA_OBJECT ON )
 option( OPENVX_USE_PIPELINING OFF )
 option( OPENVX_USE_STREAMING OFF )
 option( OPENVX_USE_OPENCL_INTEROP OFF )
@@ -115,6 +116,10 @@ if (OPENVX_USE_STREAMING)
     add_definitions( -DOPENVX_USE_STREAMING )
     message( "-- Offical Streaming extension")
 endif (OPENVX_USE_STREAMING)
+if (OPENVX_USE_USER_DATA_OBJECT)
+    add_definitions( -DOPENVX_USE_USER_DATA_OBJECT )
+    message( "-- Offical User Data Object extension")
+endif (OPENVX_USE_USER_DATA_OBJECT)
 if (OPENVX_USE_OPENCL_INTEROP)
     add_definitions( -DOPENVX_USE_OPENCL_INTEROP )
     message( "-- Official OpenVX OpenCL Interop")
