Add machine_install option
There is not way to install to a machine as build artifacts stayed in
build folder, add such an option while also updating CMakeLists.txt to
install to correct paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@
 # Global setup file for OpenVX CMake
 
 #
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.0.0)
 
 file(READ "${CMAKE_SOURCE_DIR}/VERSION" OPENVX_VERSION)
 string(STRIP "${OPENVX_VERSION}" OPENVX_VERSION)
@@ -52,19 +52,19 @@ set(CMAKE_CONFIGURATION_TYPES
 set(CMAKE_CONFIGURATION_TYPES ${CMAKE_CONFIGURATION_TYPES} CACHE STRING "Available build configurations." FORCE)
 
 # Default options for the CMake GUI
-option( OPENVX_USE_IX ON )
-option( OPENVX_USE_NN ON )
-option( OPENVX_USE_USER_DATA_OBJECT ON )
+option( OPENVX_USE_IX OFF )
+option( OPENVX_USE_NN OFF )
+option( OPENVX_USE_USER_DATA_OBJECT OFF )
 option( OPENVX_USE_PIPELINING OFF )
 option( OPENVX_USE_STREAMING OFF )
 option( OPENVX_USE_OPENCL_INTEROP OFF )
 option( OPENVX_USE_S16 OFF )
 option( OPENVX_USE_TILING OFF )
 option( OPENVX_USE_XML OFF )
-option( OPENVX_CONFORMANCE_VISION ON )
-option( OPENVX_CONFORMANCE_NEURAL_NETWORKS ON )
-option( OPENVX_CONFORMANCE_NNEF_IMPORT ON)
-option( OPENVX_USE_ENHANCED_VISION ON )
+option( OPENVX_CONFORMANCE_VISION OFF )
+option( OPENVX_CONFORMANCE_NEURAL_NETWORKS OFF )
+option( OPENVX_CONFORMANCE_NNEF_IMPORT OFF)
+option( OPENVX_USE_ENHANCED_VISION OFF )
 option( EXPERIMENTAL_USE_DOT OFF )
 option( EXPERIMENTAL_PLATFORM_SUPPORTS_16_FLOAT OFF )
 option( EXPERIMENTAL_USE_VENUM OFF)
