--- a/kernels/CMakeLists.txt
+++ b/kernels/CMakeLists.txt
@@ -44,9 +44,9 @@ file(GLOB OVX_SRC_NNEF_LIB "${CMAKE_SOURCE_DIR}/kernels/NNEF-Tools/parser/cpp/sr
 add_library (${TARGET_NAME} STATIC ${OVX_SRC_NNEF_LIB} )
 
 install ( TARGETS ${TARGET_NAME} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION bin
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 		  
 set_target_properties( ${TARGET_NAME} PROPERTIES FOLDER ${HELPER_FOLDER} )
 endif (OPENVX_CONFORMANCE_NNEF_IMPORT)
