--- a/sample/tests/CMakeLists.txt
+++ b/sample/tests/CMakeLists.txt
@@ -29,9 +29,9 @@ add_executable (${TARGET_NAME}  vx_test.c)
 target_link_libraries( ${TARGET_NAME} vx_xyz_lib openvx-debug-lib openvx-extras-lib openvx-helper openvx vxu )
 
 install ( TARGETS ${TARGET_NAME} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION lib
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 		  
 set_target_properties( ${TARGET_NAME} PROPERTIES FOLDER ${SAMPLE_FOLDER} )
 
@@ -39,27 +39,27 @@ set( TARGET_NAME2 vx_bug13510 )
 add_executable ( ${TARGET_NAME2} vx_bug13510.c)
 target_link_libraries( ${TARGET_NAME2} openvx-debug-lib openvx-extras-lib openvx-helper openvx vxu )
 install ( TARGETS ${TARGET_NAME2} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION lib
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 set_target_properties( ${TARGET_NAME2} PROPERTIES FOLDER ${SAMPLE_FOLDER} )
 
 set( TARGET_NAME3 vx_bug13518 )
 add_executable ( ${TARGET_NAME3} vx_bug13518.c)
 target_link_libraries( ${TARGET_NAME3} openvx-debug-lib openvx-extras-lib openvx-helper openvx vxu )
 install ( TARGETS ${TARGET_NAME3} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION lib
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 set_target_properties( ${TARGET_NAME3} PROPERTIES FOLDER ${SAMPLE_FOLDER} )
 
 set( TARGET_NAME4 vx_bug13517 )
 add_executable ( ${TARGET_NAME4} vx_bug13517.c)
 target_link_libraries( ${TARGET_NAME4} openvx-debug-lib openvx-extras-lib openvx-helper openvx vxu )
 install ( TARGETS ${TARGET_NAME4} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION lib
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 set_target_properties( ${TARGET_NAME4} PROPERTIES FOLDER ${SAMPLE_FOLDER} )
 		  
 if ((UNIX) AND (OPENVX_USE_SDL))
@@ -72,9 +72,9 @@ if ((UNIX) AND (OPENVX_USE_SDL))
 	target_link_libraries( ${TARGET_NAME_CAM_TEST} openvx-debug-lib openvx-extras-lib openvx-helper openvx vxu )
 
 	install ( TARGETS ${TARGET_NAME_CAM_TEST} 
-			  RUNTIME DESTINATION bin
-			  ARCHIVE DESTINATION lib
-			  LIBRARY DESTINATION bin )
+			  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+			  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+			  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 			  
 	set_target_properties( ${TARGET_NAME_CAM_TEST} PROPERTIES FOLDER ${SAMPLE_FOLDER} )
 
