--- a/kernels/tiling/CMakeLists.txt
+++ b/kernels/tiling/CMakeLists.txt
@@ -33,8 +33,8 @@ add_library (${TARGET_NAME} ${SOURCE_FILES})
 target_link_libraries( ${TARGET_NAME} openvx )
 
 install ( TARGETS ${TARGET_NAME} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION bin
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 		  
 set_target_properties( ${TARGET_NAME} PROPERTIES FOLDER ${KERNELS_FOLDER} )
