--- a/sample/cnn/cnn_network/CMakeLists.txt
+++ b/sample/cnn/cnn_network/CMakeLists.txt
@@ -43,6 +43,6 @@ target_link_libraries( ${TARGET_NAME} openvx vxu half  )
 
 
 install ( TARGETS ${TARGET_NAME}
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION lib
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
