--- a/sample/vxu/CMakeLists.txt
+++ b/sample/vxu/CMakeLists.txt
@@ -53,8 +53,8 @@ if (OPENVX_USE_OPENCL_INTEROP)
 endif (OPENVX_USE_OPENCL_INTEROP)
 
 install ( TARGETS ${TARGET_NAME} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION lib
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 		  
 set_target_properties( ${TARGET_NAME} PROPERTIES FOLDER ${SAMPLE_FOLDER} )
