--- a/tools/pgm2hdr/CMakeLists.txt
+++ b/tools/pgm2hdr/CMakeLists.txt
@@ -29,8 +29,8 @@ FIND_SOURCES()
 add_executable (${TARGET_NAME} ${SOURCE_FILES})
 
 install ( TARGETS ${TARGET_NAME} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION bin
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 		  
 set_target_properties( ${TARGET_NAME} PROPERTIES FOLDER ${TOOLS_FOLDER} )
