--- a/utils/half/CMakeLists.txt
+++ b/utils/half/CMakeLists.txt
@@ -17,7 +17,7 @@ add_library (${TARGET_NAME}  ${SOURCE_FILES} )
 
 
 install ( TARGETS ${TARGET_NAME} 
-          RUNTIME DESTINATION bin
-          ARCHIVE DESTINATION bin
-          LIBRARY DESTINATION bin )
+          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 
